sc/source/ui/inc/scuiasciiopt.hxx
@@ -89,6 +89,7 @@ class ScImportAsciiDlg : public ModalDialog
     rtl_TextEncoding            meCharSet;          /// Selected char set.
     bool                        mbCharSetSystem;    /// Is System char set selected?
     ScImportAsciiCall           meCall;             /// How the dialog is called (see asciiopt.hxx)
+    bool                        mbDetectSpaceSep;   /// Whether to detect a possible space separator.
 
 public:
                                 ScImportAsciiDlg(
@@ -111,7 +112,7 @@ private:
     /** Enables or disables all separator checkboxes and edit fields. */
     void                        SetupSeparatorCtrls();
 
-    bool                        GetLine( sal_uLong nLine, OUString &rText );
+    bool                        GetLine( sal_uLong nLine, OUString &rText, sal_Unicode& rcDetectSep );
     void                        UpdateVertical();
     inline bool                 Seek( sal_uLong nPos ); // synced to and from mnStreamPos
 
